# sourmash

./: .gitignore  MANIFEST.in  README.md  pytest.ini  setup.py
doc/: api-example.md
rust/: Cargo.toml  build.rs
rust/src/: lib.rs  utils.rs
sourmash/: commands.py  sbt.py  sbtmh.py  search.py  signature.py  signature_json.py  sourmash_args.py
sourmash_lib/: __init__.py  minhash.py  utils.py
sourmash_lib/lca/: lca_utils.py
tests/: test__minhash.py  test_sourmash.py
