[package]
name = "sourmash_lib"
version = "0.1.0"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
build = "build.rs"

[lib]
name = "sourmash_lib"
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.3.2"

[dependencies]
libc = "0.2.34"
sourmash = { git = "https://github.com/luizirber/sourmash-rust.git" }
